[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/Menus.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Menus" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="FadeOut" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeOut"]
pause_mode = 2
anims/Fade = SubResource( 1 )

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -35.0
margin_right = 52.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 52, 35 )
text = "press"

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
